View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025558 | Open CASCADE | OCCT:Modeling Algorithms | public | 2014-12-05 12:20 | 2015-05-14 15:32 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025558: It is impossible to restore attached shape | ||||
Description | Restoration of attached shape leads writing out of memory: 1640 void BSplCLib::GetPole(const Standard_Integer Index, ... 1651 for (k = 0; k < Dimension; k++) { 1652 Pole(Position) = pole[k]; 1653 Position++; 1654 } This situation caused by "PrepareInsertKnots" function in the same file, where new knot count computed. | ||||
Steps To Reproduce | restore faulty.brep | ||||
Tags | No tags attached. | ||||
Test case number | bugs fclasses(002) bug25558 | ||||
2014-12-05 12:21 developer |
faulty.brep (9,692 bytes) |
|
Branch CR25558 has been created by aml. SHA-1: 732364487f759308f14a74c9ed2d562e49b27d66 Detailed log of new commits: Author: aml Date: Fri Dec 5 12:24:45 2014 +0300 0025558: It is impossible to restore attached shape Condition of adding one last knot corrected. |
|
Dear abv, Please check current state of branch CR25558. |
|
Branch CR25558 has been updated forcibly by aml. SHA-1: cb3eb7389fdd95a879ba28885581573fa540ced3 |
|
No remarks, please test |
|
Branch CR25558 has been updated forcibly by apv. SHA-1: 17aa22dd4e4497688c8db73a7fd2cb0aa53f80fa |
|
Branch CR25558 has been rebased on the current master |
|
Branch CR25558 has been updated by apv. SHA-1: 3e428a33c3fde454bf6cac10b6a9aba48c0e11bf Detailed log of new commits: Author: apv Date: Wed Dec 10 17:39:22 2014 +0300 Test-case for issue 0025558 |
|
Dear BugMaster, Branch CR25558 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 17aa22dd4e4497688c8db73a7fd2cb0aa53f80fa Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 0 (1 on master) Regressions/Differences: Not detected Testing cases: bugs fclasses(002) bug25558 - OK http://occt-tests/CR25558-master-occt/Debian60-64/bugs/fclasses/bug25558.html http://occt-tests/CR25558-master-occt/Windows-32-VC10/bugs/fclasses/bug25558.html Testing on Linux: Total MEMORY difference: 364074712 / 363562240 Total CPU difference: 47239.96000000008 / 47537.4299999999 Testing on Windows: Total MEMORY difference: 277027136 / 277181316 Total CPU difference: 36424.1875 / 41681.890625 |
|
Branch CR25558 has been deleted by inv. SHA-1: 3e428a33c3fde454bf6cac10b6a9aba48c0e11bf |
occt: master 70d08ce5 2014-12-11 13:40:37
Committer: bugmaster Details Diff |
0025558: It is impossible to restore attached shape Condition of adding one last knot corrected. Test-case for issue 0025558 |
Affected Issues 0025558 |
|
mod - src/BSplCLib/BSplCLib.cxx | Diff File | ||
add - tests/bugs/fclasses/bug25558 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-12-05 12:20 |
|
New Issue | |
2014-12-05 12:20 |
|
Assigned To | => aml |
2014-12-05 12:21 |
|
File Added: faulty.brep | |
2014-12-05 12:26 | git | Note Added: 0035052 | |
2014-12-05 12:27 |
|
Note Added: 0035053 | |
2014-12-05 12:27 |
|
Assigned To | aml => abv |
2014-12-05 12:27 |
|
Status | new => resolved |
2014-12-05 14:49 | git | Note Added: 0035064 | |
2014-12-07 13:09 |
|
Note Added: 0035101 | |
2014-12-07 13:09 |
|
Assigned To | abv => bugmaster |
2014-12-07 13:09 |
|
Status | resolved => reviewed |
2014-12-08 11:06 |
|
Assigned To | bugmaster => apv |
2014-12-09 17:55 | git | Note Added: 0035230 | |
2014-12-09 17:56 |
|
Note Added: 0035231 | |
2014-12-10 17:39 | git | Note Added: 0035278 | |
2014-12-10 17:40 |
|
Test case number | => bugs fclasses(002) bug25558 |
2014-12-10 17:42 |
|
Note Added: 0035279 | |
2014-12-10 17:42 |
|
Assigned To | apv => bugmaster |
2014-12-10 17:42 |
|
Status | reviewed => tested |
2014-12-16 16:46 | bugmaster | Changeset attached | => occt master 70d08ce5 |
2014-12-16 16:46 | bugmaster | Status | tested => verified |
2014-12-16 16:46 | bugmaster | Resolution | open => fixed |
2015-01-19 16:23 | bugmaster | Target Version | 7.0.0 => 6.9.0 |
2015-01-26 12:35 | git | Note Added: 0036577 | |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:32 |
|
Fixed in Version | => 6.9.0 |