0025558: It is impossible to restore attached shape

Condition of adding one last knot corrected.

Test-case for issue #25558